Added link to example statement.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Title: Sage
 			<h2 class="filename"></h2>
 			<h2 onclick="analyze()" class="start_button">Analyze</h2>
 			<img class="start_here" alt="Start Here" src="start_here.png">
+            <a href="transactions-person-A.csv" download>Download Example Credit Card Statement</a>
 		</div>
 		<div class="page_content">
 			<h1 id="header">Analysis Report</h1>
